# wsstunnel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  wstunnel.md  深度解析.md  评价.md
.github/workflows/: publish.yml
docs/: 优势分析.md  深度剖析.md  评价.md
tests/: test_cli.py  test_client.py  test_protocol.py  test_relay.py
web/: index.html
ws_tunnel/: __init__.py  __main__.py  cli.py  client.py  relay.py
wsstunnel/: __init__.py  __main__.py  cli.py  client.py  relay.py
wsstunnel/web/: index.html
