[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ws-tunnel"
version = "0.1.0"
description = "WebSocket reverse shell relay with HTTP proxy support"
authors = [{name = "ws-tunnel", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client >= 1.3.0",
    "websockets >= 10.0",
    "click >= 8.0",
]

[project.scripts]
ws-tunnel = "ws_tunnel.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/ws-tunnel"
